# echolot

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md  README.md  demonstration.dat.rec
.zed/: debug.json
src/: \  audio.rs  audio_devices.rs  cli.rs  codec.rs  coding.rs  decode.rs  encode.rs  error_correction.rs  fft.rs  frequency.rs  main.rs  modulation.rs  packets.rs  pitch_detection.rs  playback.rs  processor.rs  quantise.rs  receive.rs  sound.rs  transmit.rs
src/receive/: microphone.rs  pitch_detection.rs  util.rs
src/transmit/: sound.rs  speaker.rs
