[package]
name = "echolot"
description = "A way to quickly share files over sound"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
fundsp = "0.6.3"
anyhow = "1.0.57"
base64 = "0.13.0"
