[package]
name = "echolot"
version = "0.2.0"
edition = "2021"

[dependencies]
# general cli
clap = { version = "4.5.2", features = ["derive"] }
# progress bars and spinners
indicatif = "0.17.8"
# interactive user prompts
inquire = "0.7.0"
# audio
cpal = "0.15.3"
rodio = "0.17.3"
audio_thread_priority = "0.31.0"
# codec
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
crc32fast = "1.4.0"
