[package]
name = "echolot"
version = "0.2.0"
edition = "2024"

[dependencies]
# general cli
clap = { version = "4.5.2", features = ["derive"] }
# progress bars and spinners
indicatif = "0.17.8"
# interactive user prompts
inquire = "0.7.0"
# audio
cpal = "0.15.3"
rodio = "0.17.3"
audio_thread_priority = "0.31.0"
rustfft = "6.2.0"
num-complex = "0.4.5"
rtrb = "0.3.4"
ringbuf = "0.5.0"
circular-buffer = "0.1.9"
# codec
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
crc32fast = "1.4.0"
rust-lzma = "0.6.0"
reed-solomon-erasure = "6.0.0"
humantime = "2.3.0"

[dev-dependencies]
rand = "0.10.1"
